--- a/tribute.html
+++ b/tribute.html
@@ -38,7 +38,7 @@
 	}
 	.flex{
 		display: flex;
-		margin-right: 10px;
+		margin-right: 20px;
 	}
 	.poem{
 		display: flex;
@@ -57,8 +57,8 @@
 		}
 	}
 
-	div::selection {
-		background-color: orange;
+	div::selection {/* this will change when we select certain text*/
+		background-color: yellow;
 		font-size: 30px;
 	}
 
@@ -75,6 +75,7 @@
 <div class="flex">
   <div class="image"><img src="devkota.jpg" ></div>
   <div class="explain"><h2 style="font-family: arial; color: darkblue;">About Laxmi Prasad Devkota</h2>Laxmi Prasad Devkota (Nepali: लक्ष्मीप्रसाद देवकोटा,(12 November 1909 – 14 September 1959) was a Nepali poet, playwright, and novelist. Honored with the title of Mahakavi (literal translation: The Great Poet or Poet the Great) in Nepali literature, and known as the poet with the golden heart. Devkota is by and large regarded as the great poet (महाकवि) of Nepali language. He is considered as the greatest and the most famous versatile literary figure of Nepal.[1][2] Some of his popular works include the best selling Muna Madan, along with Sulochana, Kunjini, "Bhikhari", and Shakuntal. A legend whose contribution never be forgotten in the history of Nepalese literature.</div>
+
 <div class="poem">
 	
   <div>	<h3>-Famous <i style="color: blue;">Poems</i> of laxmi prasad     -</h3>
