js is added recently

--- a/form/form.html
+++ b/form/form.html
@@ -43,7 +43,7 @@
 			padding: 10px;
 			font-size: 20px;
 		}
-		#for{
+		#for1{
 			width: 600px;
 			border-radius: 5px;
 			padding: 10px;
@@ -70,23 +70,26 @@
 	
 </head>
 <body>
+	<form action="C:\Users\sandeep\Desktop\projects html\tribute.html" onsubmit="return myFunc()">
+
 	
 	<div class="top" ><h2>Survey form</h2>
 		<p style="font-size: 20px;">Thank you for participation</p>
 	</div><br><br>
 	<div class="whole"><br>
 	<div class="name" style="margin-left: 60px;"><label style="font-size: 20px; font-family: arial; padding-top: 30px;">Name</label><br>
-		<input type="text" name="name" placeholder="Enter your full name">
+		<input id="naam" type="text" name="name" placeholder="Enter your full name" autocomplete="off">
 	</div><br><br>
 	<div class="name" style="margin-left: 60px;"><label style="font-size: 20px; font-family: arial;">Email</label><br>
-		<input type="text" name="name" placeholder="Your Email">
+		<input id="email" type="text" name="name" placeholder="Your Email" autocomplete="off">
+		<span id="spa" style="color: red;"></span>
 	</div><br><br>
 	<div class="name"  style="margin-left: 60px;"><label style="font-size: 20px; font-family: arial;">Age(optional)</label><br>
-		<input type="number" name="name" placeholder="Your age">
+		<input id="age" type="number" name="name" placeholder="Your age" autocomplete="off">
 	</div><br><br>
 	<div class="name" style="margin-left: 60px;" ><label style="font-size: 20px; font-family: arial; ">Which option describes the current role of yours?</label><br>
-		<select id="for" style="font-size: 20px;">
-
+		<select id="for1" style="font-size: 20px;" value="select anyone">
+			<option style="font-size: 20px;">select anyone</option>
 			<option style="font-size: 20px;">student</option>
 			<option style="font-size: 20px;">programmer</option>
 			<option style="font-size: 20px;">labour</option>
@@ -96,9 +99,9 @@
 
 	<div  class="radio" style="margin-left: 60px;"><label style="font-size: 20px; font-family: arial; ">which is your favorite job you like to do?</label><br>
 
-		<input type="radio" class= "big" name="opt"><label style="font-size: 20px; font-family: arial; ">Programming</label><br>
-		<input type="radio" class= "big" name="opt"><label style="font-size: 20px; font-family: arial; "> Marketing</label><br>
-		<input type="radio" class= "big" name="opt"><label style="font-size: 20px; font-family: arial; ">Business</label><br>
+		<input id="radio1" type="radio" class= "big" name="opt"><label style="font-size: 20px; font-family: arial; ">Programming</label><br>
+		<input id="radio2" type="radio" class= "big" name="opt"><label style="font-size: 20px; font-family: arial; "> Marketing</label><br>
+		<input id="radio3" type="radio" class= "big" name="opt"><label style="font-size: 20px; font-family: arial; ">Business</label><br>
 	</div><br><br>
 
 	<div  class="checkbox" style="margin-left: 60px;"><label style="font-size: 20px; font-family: arial; ">what is favorite street food?</label><br>
@@ -114,10 +117,10 @@
 	</div><br><br>
 
 	<div style="margin-left: 60px;"><label style="font-size: 20px; font-family: arial; ">Any Message Or Comment</label><br>
-	<textarea style="width: 600px; height: 85px; font-size: 20px;" placeholder="Enter message here"></textarea><br><br>
+	<textarea id="message" style="width: 600px; height: 85px; font-size: 20px;" placeholder="Enter message here"></textarea><br><br>
 
 
-	<div  style="margin-right: 60px;"><h4 style="text-align: center; background-color: lightgreen; color: white; font-size: 20px; padding: 10px; cursor: pointer;">submit</h4>
+	<div  style="margin-right: 60px;"><input id="sub" type="submit" style="text-align: center; background-color: green; color: white; font-size: 20px; padding: 10px; cursor: pointer;">
 	
 	</div>
 
@@ -125,6 +128,67 @@
 	
 
 </div>
+
+</form>
+
+<script type="text/javascript">
+	
+	function myFunc(){
+		var uname = document.getElementById("naam");
+		var uemail = document.getElementById("email");
+		var uage = document.getElementById("age");
+		var uselect = document.getElementById("for1");
+		var uradio1 = document.getElementById("radio1").checked;
+		var uradio2 = document.getElementById("radio2").checked;
+		var uradio3 = document.getElementById("radio3").checked;
+		var umessage = document.getElementById("message");
+
+		if(uname.value.trim() == ""){
+			alert("please eneter the uname.");
+			document.getElementById("naam").style.border = "2px solid red";
+			return false;
+			
+		}
+
+		else if(uemail.value.trim() == ""){
+			document.getElementById("email").style.border = "2px solid red";
+			document.getElementById("spa").innerHTML = "<br>	"+"**please fill the email";// this will appear just below the input of emailif it is fault
+			return false;
+	}
+
+		else if(uage.value.trim() == ""){
+			alert("please eneter your age.");
+			document.getElementById("age").style.border = "2px solid red";
+			return false;
+			
+		}
+
+		else if(uselect.value == "select anyone"){
+			alert("select any given value");
+			document.getElementById("for1").style.border = "2px solid red";
+			return false;
+		}
+
+		else if(uradio1 == false && uradio2 == false  && uradio3 == false){
+			alert("u didn't select radio button");
+			return false;
+
+		}
+		else if(umessage.value == ""){
+			alert("please leave some message");
+			document.getElementById("message").style.border = "2px solid red";
+			return false;
+		}
+
+		else{
+			return true;
+		}
+
+
+
+
+	}
+</script>
 	
 </body>
 </html>
